Fixed spacing issue with incode and reduced logo size and increased blogs heading size

--- a/theme/swanlotus/static/sass/swanlotus.sass
+++ b/theme/swanlotus/static/sass/swanlotus.sass
@@ -63,7 +63,7 @@ html
     padding: $navbar-padding
 
 .navbar-item img
-    max-height: 4em
+    max-height: 3.5rem
 
 .navbar a
     color: $navbar-item-color
